/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */

package Heroe;

/**
 *
 * @author visita
 */
public class Cuchillo extends Armas{
    
    public Cuchillo () {
        super.setNombre ("Cuchillo");
        super.setPeso(1);
        super.setAlcance(3);
        super.setDanio (15);

    }

    public void Atacar () {
        
    }
    
    public void RecargarArma (Objetos obj) {
        
    }    

}
