/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package Heroe;

/**
 *
 * @author lucas
 */
public class Maza extends Armas {

    public Maza() {
        setPeso(2);
        setNombre("Maza de madera");
        setAlcance(2);
        setDanio(3);
    }

    @Override
    public void Atacar() {
       
    }

    @Override
    public void RecargarArma(Objetos obj) {
        
    } 
}
