@startuml Armas

skinparam ClassAttributeIconSize 0
hide circle

class Armas <<abstract>> {
    - Integer alcance
    - Integer danio
    + Atacar ()
    + RecargarArma (Objetos obj)
}

class Espada {
}

class Cuchillo {
}

class Onda {
}

class Hacha {
}

class Maza {
}

class Ballesta {
}

class Objetos <<abstract>> {
    + Integer peso
    + String nombre
}

Objetos <|-- Armas
Armas <|-- Espada
Armas <|-- Cuchillo
Armas <|-- Maza
Armas <|-- Ballesta
Armas <|-- Onda
Armas <|-- Hacha

@enduml
